crates/plotnik-lib/tests/04-emit/fields/ts_type_alias_field_order.txt
Q = (type_alias_declaration type_parameters: (type_parameters) @tp name: (type_identifier) @name)
==== input.ts ====
==== diagnostics ====
error: the grammar builds no `type_alias_declaration` with these children
 --> query.ptk:1:6
  |
1 | Q = (type_alias_declaration type_parameters: (type_parameters) @tp name: (type_identifier) @name)
  |      ^^^^^^^^^^^^^^^^^^^^^^
  |
help: `type_alias_declaration` allows fields `name`, `type_parameters` or `value`
help: each child is admissible here on its own — it is their combination or order the grammar never produces
